--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
@@ -669,7 +669,7 @@
  trait_pc_pd_calcite_preference: "草原星球偏好"
  trait_pc_pd_calcite_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_cryovolcano: "冰火山星球"
- pc_pd_cryovolcano_desc: "拥有氮氧大气层的寒冷岩石星球。从地下喷涌水、氨及甲烷的冰火山，还会将营养物质带到地表，生命因而得以在此繁衍。"
+ pc_pd_cryovolcano_desc: "拥有氮氧大气层的寒冷岩石星球。冰层下的水、氨及甲烷会从冰火山中喷发，营养物质也会一并到达地表，生命因而得以在此繁衍。"
  pc_pd_cryovolcano_adj: "冰火山"
  mod_pc_pd_cryovolcano_habitability: "苔原星球宜居性"
  trait_pc_pd_cryovolcano_preference: "苔原星球偏好"
