Oct Update - Moss, Ironsand, New Policy

--- a/planetary_diversity/localisation/braz_por/planetarydiversity_planet_modifiers_l_braz_por.yml
+++ b/planetary_diversity/localisation/braz_por/planetarydiversity_planet_modifiers_l_braz_por.yml
@@ -18,6 +18,8 @@
  pd_temperate_desc: "Este mundo possui um clima ameno que sustenta uma rica biodiversidade em quase todos os continentes."
  pd_sakura: "Sakura World"
  pd_sakura_desc: "Significant landmasses, separated by oceans and lush forests of beautiful flowering trees cover the surface."
+ pd_moss: "$pc_pd_moss$"
+ pd_moss_desc: "$pc_pd_moss_desc$"
  pd_megaflora: "Mundo Megaflora"
  pd_megaflora_desc: "A colossal flora arbórea deste mundo cobre a superfície, com extensas raízes que se estendem por quilômetros abaixo. Navegar pelo planeta diante desta vegetação rara apresenta desafios significativos."
  pd_petrified: "Mundo Petrificado"
@@ -78,6 +80,8 @@
  pd_coastal_desc: "Os oceanos profundos induzem alta estabilidade atmosférica, limitando as chuvas superficiais. Névoa e neblina predominantes sustentam várias suculentas e arbustos."
  pd_fungi: "Mundo Desértico Fúngico"
  pd_fungi_desc: "Seco e coberto de cinzas vulcânicas, este mundo abriga fungos do deserto que resistem a altas temperaturas, à secura e à baixa nutrição."
+ pd_ironsand: "$pc_pd_ironsand$"
+ pd_ironsand_desc: "$pc_pd_ironsand_desc$"
  pd_salt: "Mundo Salar"
  pd_salt_desc: "Ricos depósitos minerais abrangem este planeta, mas o elevado teor de sal na maior parte da superfície revela-se inóspito para muitas formas de vida vegetal e animal."
  pd_aquifer: "Mundo Aquífero"
