--- a/planetary_diversity/localisation/english/planetarydiversity_planet_modifiers_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_planet_modifiers_l_english.yml
@@ -18,6 +18,8 @@
  pd_temperate_desc: "This world boasts a mild climate supporting rich biodiversity on almost every continent."
  pd_sakura: "Sakura World"
  pd_sakura_desc: "Significant landmasses, separated by oceans and lush forests of beautiful flowering trees cover the surface."
+ pd_moss: "$pc_pd_moss$"
+ pd_moss_desc: "$pc_pd_moss_desc$"
  pd_megaflora: "Megaflora World"
  pd_megaflora_desc: "This world's colossal tree-like flora drapes the surface, with extensive roots reaching for miles beneath. Navigating the construction landscape around this rare vegetation presents significant challenges."
  pd_petrified: "Petrified Woods World"
@@ -78,6 +80,8 @@
  pd_coastal_desc: "The deep oceans induce high atmospheric stability, limiting surface rainfall. Prevalent fog and haze sustain various succulents and shrubs."
  pd_fungi: "Desert Fungi World"
  pd_fungi_desc: "Dry and covered in volcanic ash, this world hosts desert fungi that resist high temperatures, dryness, and low nutrition."
+ pd_ironsand: "$pc_pd_ironsand$"
+ pd_ironsand_desc: "$pc_pd_ironsand_desc$"
  pd_salt: "Salt World"
  pd_salt_desc: "Rich mineral deposits span this planet, yet the high salt content on most of the surface proves inhospitable to many forms of plant and animal life."
  pd_aquifer: "Aquifer World"
