--- a/planetary_diversity/localisation/french/planetarydiversity_engine_events_l_french.yml
+++ b/planetary_diversity/localisation/french/planetarydiversity_engine_events_l_french.yml
@@ -10,6 +10,7 @@
  pdengine.21.tepid: "$pc_pd_tepid$"
  pdengine.21.temperate: "$pc_pd_temperate$"
   pdengine.21.sakura: "$pc_pd_sakura$"
+ pdengine.21.moss: "$pc_pd_moss$"
  pdengine.21.mushroom: "$pc_pd_mushroom$"
  pdengine.21.megaflora: "$pc_pd_megaflora$"
  pdengine.21.petrified: "$pc_pd_petrified$"
@@ -38,6 +39,7 @@
  pdengine.21.outback: "$pc_pd_outback$"
  pdengine.21.coastal: "$pc_pd_coastal$"
  pdengine.21.fungi: "$pc_pd_fungi$"
+ pdengine.21.ironsand: "$pc_pd_ironsand$"
  pdengine.21.salt: "$pc_pd_salt$"
  pdengine.21.aquifer: "$pc_pd_aquifer$"
  pdengine.21.arid: "$pc_arid$"
