--- a/planetary_diversity/localisation/french/planetarydiversity_planet_classes_l_french.yml
+++ b/planetary_diversity/localisation/french/planetarydiversity_planet_classes_l_french.yml
@@ -38,6 +38,12 @@ trait_pc_pd_temperate_preference_desc: "$trait_pc_arctic_preference_desc$"
  mod_pc_pd_sakura_habitability: "Continental Habitability"
  trait_pc_pd_sakura_preference: "Continental Preference"
  trait_pc_pd_sakura_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_moss: "Moss World"
+ pc_pd_moss_desc: "The planet's surface is completely covered by dense, sprawling moss. This relentless flora blankets the land, creating a sponge-like ecosystem that stabilizes the hydrosphere."
+ pc_pd_moss_adj: "mossy"
+ mod_pc_pd_moss_habitability: "Continental Habitability"
+ trait_pc_pd_moss_preference: "Continental Preference"
+ trait_pc_pd_moss_preference_desc: "$trait_pc_arctic_preference_desc$"
 pc_pd_petrified: "Monde de Bois Pétrifiés"
 pc_pd_petrified_desc: "Monde rocheux avec une atmosphère à base d'azote et d'oxygène avec une hydrosphère active et stable. Les vastes masses terrestres sont séparées par des océans, avec de grandes variations climatiques. En raison de l'effet d'un déluge planétaire après une ère glaciaire, des restes pétrifiés de géants arbres peuvent être trouvés à la fois à la surface et enterrés dans le sol."
 pc_pd_petrified_adj: "pétrifié"
@@ -194,6 +200,12 @@ pc_pd_fungi_adj: "fongique"
 mod_pc_pd_fungi_habitability: "Habitabilité Désertique"
 trait_pc_pd_fungi_preference: "Préférence Désertique"
 trait_pc_pd_fungi_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_ironsand: "Ironsand World"
+ pc_pd_ironsand_desc: "This desert planet has unusually high iron deposits, leading to bright red sand from oxidized iron and dark rocks rich in unoxidized minerals."
+ pc_pd_ironsand_adj: "sandy"
+ mod_pc_pd_ironsand_habitability: "Desert Habitability"
+ trait_pc_pd_ironsand_preference: "Desert Preference"
+ trait_pc_pd_ironsand_preference_desc: "$trait_pc_arctic_preference_desc$"
 pc_pd_salt: "Monde de Sel"
 pc_pd_salt_desc: "Monde rocheux avec une atmosphère à base d'azote et d'oxygène. Le terrain couvert de minéraux se compose principalement de plaines de sel et de chaînes de montagnes et de grandes formations cristallines. Une grande partie de la surface est inhospitalière pour la plupart des formes de vie végétale et animale."
 pc_pd_salt_adj: "salé"
