--- a/planetary_diversity/localisation/french/planetarydiversity_planet_modifiers_l_french.yml
+++ b/planetary_diversity/localisation/french/planetarydiversity_planet_modifiers_l_french.yml
@@ -18,6 +18,8 @@ pd_temperate: "Monde Tempéré"
 pd_temperate_desc: "Un climat doux et une riche biodiversité font de cette planète un endroit idéal."
  pd_sakura: "Sakura World"
  pd_sakura_desc: "Significant landmasses, separated by oceans and lush forests of beautiful flowering trees cover the surface."
+ pd_moss: "$pc_pd_moss$"
+ pd_moss_desc: "$pc_pd_moss_desc$"
 pd_megaflora: "Monde de la Mégafloraison"
 pd_megaflora_desc: "Le dense monde de la mégafloraison regorge de plantes gigantesques dont les racines souvent déterrent des dépôts précieux, et produisent également une sève riche en énergie à utiliser. Construire autour de la mégafloraison signifie que les coûts de construction sont plus élevés que la normale."
 pd_petrified: "Monde des Bois Pétrifiés"
@@ -79,6 +81,8 @@ pd_coastal: "Monde Côtier"
 pd_coastal_desc: "L'hydrosphère se trouve dans de profonds océans froids avec des courants qui provoquent une haute stabilité atmosphérique réduisant les précipitations sur terre, mais permettant le brouillard et la brume qui fournissent une humidité suffisante pour soutenir une variété de lichens, de plantes succulentes et de buissons."
 pd_fungi: "Monde Fongique"
 pd_fungi_desc: "Sec et couvert de cendres volcaniques, ce monde est envahi par des champignons du désert qui résistent aux températures élevées, à la sécheresse et à la faible nutrition."
+ pd_ironsand: "$pc_pd_ironsand$"
+ pd_ironsand_desc: "$pc_pd_ironsand_desc$"
 pd_salt: "Monde de Sel"
 pd_salt_desc: "Bien que des dépôts minéraux riches puissent être trouvés partout sur cette planète, une grande partie de la surface est inhospitalière pour la plupart des formes de vie végétale et animale."
 pd_aquifer: "Monde Aquifères"
