--- a/planetary_diversity/localisation/german/planetarydiversity_planet_classes_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_planet_classes_l_german.yml
@@ -37,6 +37,12 @@
  mod_pc_pd_sakura_habitability: "Bewohnbarkeit (Kontinental)"
  trait_pc_pd_sakura_preference: "Anpassung (Kontinental)"
  trait_pc_pd_sakura_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_moss: "Moss World"
+ pc_pd_moss_desc: "The planet's surface is completely covered by dense, sprawling moss. This relentless flora blankets the land, creating a sponge-like ecosystem that stabilizes the hydrosphere."
+ pc_pd_moss_adj: "mossy"
+ mod_pc_pd_moss_habitability: "Continental Habitability"
+ trait_pc_pd_moss_preference: "Continental Preference"
+ trait_pc_pd_moss_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_petrified: "Versteinerter Wald Welt"
  pc_pd_petrified_desc: "Felsige Welt mit einer Stickstoff-Sauerstoff-Atmosphäre und einer aktiven und stabilen Hydrosphäre. Große Landmassen sind durch Ozeane getrennt und weisen große Klimaschwankungen auf. Aufgrund der Auswirkungen einer planetenweiten Flut nach einer Eiszeit können versteinerte Überreste riesiger Bäume sowohl auf der Oberfläche als auch im Boden vergraben gefunden werden."
  pc_pd_petrified_adj: "versteinert"
@@ -137,6 +143,12 @@
  mod_pc_pd_fungal_habitability: "Bewohnbarkeit (Tropisch)"
  trait_pc_pd_fungal_preference: "Anpassung (Tropisch)"
  trait_pc_pd_fungal_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_ironsand: "Ironsand World"
+ pc_pd_ironsand_desc: "This desert planet has unusually high iron deposits, leading to bright red sand from oxidized iron and dark rocks rich in unoxidized minerals."
+ pc_pd_ironsand_adj: "sandy"
+ mod_pc_pd_ironsand_habitability: "Desert Habitability"
+ trait_pc_pd_ironsand_preference: "Desert Preference"
+ trait_pc_pd_ironsand_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_aerial: "Schwebende Welt"
  pc_pd_aerial_desc: "Dieser Planet ist eine feuchte, felsige Welt mit einer dichten Stickstoff-Sauerstoff-Atmosphäre und weist erhebliche Niederschläge auf. Hoch über den von dichter Vegetation umhüllten Landmassen gleiten riesige Samenkapseln, die von der einzigartigen Flora des Planeten getragen werden, wie Wolken durch den Himmel."
  pc_pd_aerial_adj: "schwebend"
