--- a/planetary_diversity/localisation/german/planetarydiversity_planet_modifiers_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_planet_modifiers_l_german.yml
@@ -18,6 +18,8 @@
  pd_temperate_desc: "Diese Welt verfügt über ein mildes Klima, das eine reiche Artenvielfalt auf fast allen Kontinenten unterstützt."
  pd_sakura: "Sakura Welt"
  pd_sakura_desc: "Bedeutende Landmassen, getrennt durch Ozeane und üppige Wälder mit wunderschön blühenden Bäumen bedecken die Oberfläche."
+ pd_moss: "$pc_pd_moss$"
+ pd_moss_desc: "$pc_pd_moss_desc$"
  pd_megaflora: "Megaflora Welt"
  pd_megaflora_desc: "Die riesige baumartige Flora dieser Welt bedeckt die Oberfläche und ihre langen Wurzeln reichen kilometerweit in die Tiefe. Das Navigieren der Baumannschaften um diese seltene Vegetation herum stellt eine große Herausforderung dar."
  pd_petrified: "Versteinerter Wald Welt"
@@ -78,6 +80,8 @@
  pd_coastal_desc: "Die Tiefsee sorgt für eine hohe atmosphärische Stabilität und begrenzt den Niederschlag an der Oberfläche. Der vorherrschende Nebel und Dunst ist die Nahrungsquelle für verschiedene Sukkulenten und Sträucher."
  pd_fungi: "Pilzwüsten Welt"
  pd_fungi_desc: "Diese trockene und mit Vulkanasche bedeckte Welt beherbergt Wüstenpilze, die hohen Temperaturen, Trockenheit und Nährstoffmangel standhalten."
+ pd_ironsand: "$pc_pd_ironsand$"
+ pd_ironsand_desc: "$pc_pd_ironsand_desc$"
  pd_salt: "Salzwelt"
  pd_salt_desc: "Der Planet ist über und über mit reichen Mineralvorkommen bedeckt, doch der hohe Salzgehalt der Oberfläche ist für viele Pflanzen- und Tierarten unwirtlich."
  pd_aquifer: "Aquifer Welt"
