--- a/planetary_diversity/localisation/japanese/planetarydiversity_planet_classes_l_japanese.yml
+++ b/planetary_diversity/localisation/japanese/planetarydiversity_planet_classes_l_japanese.yml
@@ -37,6 +37,12 @@
  mod_pc_pd_sakura_habitability: "Continental Habitability"
  trait_pc_pd_sakura_preference: "Continental Preference"
  trait_pc_pd_sakura_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_moss: "Moss World"
+ pc_pd_moss_desc: "The planet's surface is completely covered by dense, sprawling moss. This relentless flora blankets the land, creating a sponge-like ecosystem that stabilizes the hydrosphere."
+ pc_pd_moss_adj: "mossy"
+ mod_pc_pd_moss_habitability: "Continental Habitability"
+ trait_pc_pd_moss_preference: "Continental Preference"
+ trait_pc_pd_moss_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_petrified: "Petrified Woods World"
  pc_pd_petrified_desc: "Rocky world with a nitrogen-oxygen atmosphere with an active and stable hydrosphere. Great landmasses are separated by oceans, with large climate variations. Due to the effect of a planetwide flood after an ice age, petrified remains of giant trees can be found both on the surface and buried in the ground."
  pc_pd_petrified_adj: "petrified"
@@ -193,6 +199,18 @@
  mod_pc_pd_fungi_habitability: "Desert Habitability"
  trait_pc_pd_fungi_preference: "Desert Preference"
  trait_pc_pd_fungi_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_ironsand: "Ironsand World"
+ pc_pd_ironsand_desc: "This desert planet has unusually high iron deposits, leading to bright red sand from oxidized iron and dark rocks rich in unoxidized minerals."
+ pc_pd_ironsand_adj: "sandy"
+ mod_pc_pd_ironsand_habitability: "Desert Habitability"
+ trait_pc_pd_ironsand_preference: "Desert Preference"
+ trait_pc_pd_ironsand_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_ironsand: "Ironsand World"
+ pc_pd_ironsand_desc: "This desert planet has unusually high iron deposits, leading to bright red sand from oxidized iron and dark rocks rich in unoxidized minerals."
+ pc_pd_ironsand_adj: "sandy"
+ mod_pc_pd_ironsand_habitability: "Desert Habitability"
+ trait_pc_pd_ironsand_preference: "Desert Preference"
+ trait_pc_pd_ironsand_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_salt: "Salt World"
  pc_pd_salt_desc: "Rocky world with a nitrogen-oxygen atmosphere. The mineral-covered terrain consists largely of salt flats and mountain ranges and large crystal formations. Much of the surface is inhospitable to most forms of plant and animal life."
  pc_pd_salt_adj: "salty"
