--- a/planetary_diversity/localisation/korean/planetarydiversity_planet_classes_l_korean.yml
+++ b/planetary_diversity/localisation/korean/planetarydiversity_planet_classes_l_korean.yml
@@ -37,6 +37,12 @@
  mod_pc_pd_sakura_habitability: "Continental Habitability"
  trait_pc_pd_sakura_preference: "Continental Preference"
  trait_pc_pd_sakura_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_moss: "Moss World"
+ pc_pd_moss_desc: "The planet's surface is completely covered by dense, sprawling moss. This relentless flora blankets the land, creating a sponge-like ecosystem that stabilizes the hydrosphere."
+ pc_pd_moss_adj: "mossy"
+ mod_pc_pd_moss_habitability: "Continental Habitability"
+ trait_pc_pd_moss_preference: "Continental Preference"
+ trait_pc_pd_moss_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_petrified: "규화목 행성"
  pc_pd_petrified_desc: "대기가 질소와 산소로 조성된 암석형 행성입니다. 매우 활동적이고 안정적인 수권이 존재합니다. 거대한 대륙은 바다로 분리되어 있으며 기후 변화가 큽니다. 빙하기 이후 전 행성적인 홍수의 영향으로 거대한 규화목이 지표면과 땅속에 묻혀 있는 것을 볼 수 있습니다."
  pc_pd_petrified_adj: "규화된"
@@ -193,6 +199,12 @@
  mod_pc_pd_fungi_habitability: "사막 행성 거주 적합도"
  trait_pc_pd_fungi_preference: "사막 행성 선호"
  trait_pc_pd_fungi_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_ironsand: "Ironsand World"
+ pc_pd_ironsand_desc: "This desert planet has unusually high iron deposits, leading to bright red sand from oxidized iron and dark rocks rich in unoxidized minerals."
+ pc_pd_ironsand_adj: "sandy"
+ mod_pc_pd_ironsand_habitability: "Desert Habitability"
+ trait_pc_pd_ironsand_preference: "Desert Preference"
+ trait_pc_pd_ironsand_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_salt: "소금 행성"
  pc_pd_salt_desc: "대기가 질소와 산소로 조성된 암석형 행성입니다. 광물로 덮인 지형은 주로 소금 평원과 산맥, 거대한 결정체로 이루어져 있습니다. 표면의 대부분은 대부분의 식물과 동물이 살 수 없는 환경입니다."
  pc_pd_salt_adj: "짭잘한"
