--- a/planetary_diversity/localisation/korean/planetarydiversity_planet_modifiers_l_korean.yml
+++ b/planetary_diversity/localisation/korean/planetarydiversity_planet_modifiers_l_korean.yml
@@ -18,6 +18,8 @@
  pd_temperate_desc: "이 행성은 거의 모든 대륙에서 풍부한 생물 다양성을 지원하는 온화한 기후를 자랑합니다."
  pd_sakura: "Sakura World"
  pd_sakura_desc: "Significant landmasses, separated by oceans and lush forests of beautiful flowering trees cover the surface."
+ pd_moss: "$pc_pd_moss$"
+ pd_moss_desc: "$pc_pd_moss_desc$"
  pd_megaflora: "거대식물 행성"
  pd_megaflora_desc: "이 행성의 거대한 나무와 같은 식물이 표면을 뒤덮고 있으며, 뿌리는 수 마일 아래까지 뻗어 있습니다. 이 희귀한 식생 주변의 건설 지형을 탐색하는 것은 상당한 도전 과제입니다."
  pd_petrified: "규화목 행성"
@@ -78,6 +80,8 @@
  pd_coastal_desc: "심해는 높은 대기 안정성을 유도하여 지표면 강우량을 제한합니다. 안개와 안개가 만연해 다양한 다육식물과 관목이 자랄 수 있습니다."
  pd_fungi: "사막 균사체 행성"
  pd_fungi_desc: "건조하고 화산재로 뒤덮인 이 행성에는 고온, 건조, 영양 부족을 견디는 사막 곰팡이가 서식하고 있습니다."
+ pd_ironsand: "$pc_pd_ironsand$"
+ pd_ironsand_desc: "$pc_pd_ironsand_desc$"
  pd_salt: "소금 행성"
  pd_salt_desc: "풍부한 광물 퇴적물이 행성에 걸쳐 있지만, 대부분의 표면의 높은 염분 함량으로 인해 다양한 형태의 동식물이 살기에는 열악한 환경입니다."
  pd_aquifer: "대수층 행성"
