--- a/planetary_diversity/localisation/polish/planetarydiversity_planet_classes_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_planet_classes_l_polish.yml
@@ -37,6 +37,12 @@
  mod_pc_pd_sakura_habitability: "Continental Habitability"
  trait_pc_pd_sakura_preference: "Continental Preference"
  trait_pc_pd_sakura_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_moss: "Moss World"
+ pc_pd_moss_desc: "The planet's surface is completely covered by dense, sprawling moss. This relentless flora blankets the land, creating a sponge-like ecosystem that stabilizes the hydrosphere."
+ pc_pd_moss_adj: "mossy"
+ mod_pc_pd_moss_habitability: "Continental Habitability"
+ trait_pc_pd_moss_preference: "Continental Preference"
+ trait_pc_pd_moss_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_petrified: "Świat skamieniałych lasów"
  pc_pd_petrified_desc: "Skalisty świat z atmosferą azotowo-tlenową z aktywną i stabilną hydrosferą. Wielkie masy lądowe oddzielone są oceanami i charakteryzują się dużymi wahaniami klimatycznymi. W wyniku powodzi obejmującej całą planetę po epoce lodowcowej, skamieniałe pozostałości gigantycznych drzew można znaleźć zarówno na powierzchni, jak i zakopane w ziemi."
  pc_pd_petrified_adj: "skamieniały"
@@ -193,6 +199,12 @@
  mod_pc_pd_fungi_habitability: "Możliwość zamieszkania świata pustynnego"
  trait_pc_pd_fungi_preference: "Preferowany teren: pustynia"
  trait_pc_pd_fungi_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_ironsand: "Ironsand World"
+ pc_pd_ironsand_desc: "This desert planet has unusually high iron deposits, leading to bright red sand from oxidized iron and dark rocks rich in unoxidized minerals."
+ pc_pd_ironsand_adj: "sandy"
+ mod_pc_pd_ironsand_habitability: "Desert Habitability"
+ trait_pc_pd_ironsand_preference: "Desert Preference"
+ trait_pc_pd_ironsand_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_salt: "Świat solny"
  pc_pd_salt_desc: "Skalisty świat z atmosferą azotowo-tlenową. Teren pokryty minerałami składa się głównie z równin solnych i pasm górskich oraz dużych formacji kryształowych. Duża część powierzchni jest niegościnna dla większości form życia roślinnego i zwierzęcego."
  pc_pd_salt_adj: "solny"
