--- a/planetary_diversity/localisation/polish/planetarydiversity_planet_modifiers_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_planet_modifiers_l_polish.yml
@@ -18,6 +18,8 @@
  pd_temperate_desc: "Ten świat może poszczycić się łagodnym klimatem, który sprzyja bogatej różnorodności biologicznej na niemal każdym kontynencie."
  pd_sakura: "Sakura World"
  pd_sakura_desc: "Significant landmasses, separated by oceans and lush forests of beautiful flowering trees cover the surface."
+ pd_moss: "$pc_pd_moss$"
+ pd_moss_desc: "$pc_pd_moss_desc$"
  pd_megaflora: "Świat megafloryczny"
  pd_megaflora_desc: "Ogromna, drzewiasta flora tego świata pokrywa powierzchnię, a rozległe korzenie sięgają mil pod nią. Poruszanie się po terenie budowlanym wokół tej rzadkiej roślinności stwarza poważne wyzwania."
  pd_petrified: "Świat skamieniałych lasów"
@@ -78,6 +80,8 @@
  pd_coastal_desc: "Głębokie oceany zapewniają wysoką stabilność atmosfery, ograniczając opady powierzchniowe. Występująca mgła i zamglenie stanowią pożywkę dla różnych sukulentów i krzewów."
  pd_fungi: "Świat suchych grzybów"
  pd_fungi_desc: "Na tym suchym i pokrytym popiołem wulkanicznym świecie występują grzyby pustynne, które są odporne na wysokie temperatury, suchość i niskie wartości odżywcze."
+ pd_ironsand: "$pc_pd_ironsand$"
+ pd_ironsand_desc: "$pc_pd_ironsand_desc$"
  pd_salt: "Świat solny"
  pd_salt_desc: "Bogate złoża minerałów pokrywają tę planetę, jednak wysoka zawartość soli na większości powierzchni okazuje się niegościnna dla wielu form życia roślinnego i zwierzęcego."
  pd_aquifer: "Świat wodonośny"
