--- a/planetary_diversity/localisation/russian/planetarydiversity_planet_classes_l_russian.yml
+++ b/planetary_diversity/localisation/russian/planetarydiversity_planet_classes_l_russian.yml
@@ -37,6 +37,12 @@
  mod_pc_pd_sakura_habitability: "Приспособленность к континентальным мирам"
  trait_pc_pd_sakura_preference: "Предпочтение континентальных миров"
  trait_pc_pd_sakura_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_moss: "Moss World"
+ pc_pd_moss_desc: "The planet's surface is completely covered by dense, sprawling moss. This relentless flora blankets the land, creating a sponge-like ecosystem that stabilizes the hydrosphere."
+ pc_pd_moss_adj: "mossy"
+ mod_pc_pd_moss_habitability: "Continental Habitability"
+ trait_pc_pd_moss_preference: "Continental Preference"
+ trait_pc_pd_moss_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_petrified: "Мир окаменелых лесов"
  pc_pd_petrified_desc: "Каменистый мир с азотно-кислородной атмосферой и активной и стабильной гидросферой. Огромные материки разделены океанами, а климат сильно варьируется. Из-за последствий планетарного потопа после ледникового периода окаменелые останки гигантских деревьев можно найти как на поверхности, так и погребенными в земле."
  pc_pd_petrified_adj: "окаменелая"
@@ -193,6 +199,12 @@
  mod_pc_pd_fungi_habitability: "Приспособленность к пустынным мирам"
  trait_pc_pd_fungi_preference: "Предпочтение пустынных миров"
  trait_pc_pd_fungi_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_ironsand: "Ironsand World"
+ pc_pd_ironsand_desc: "This desert planet has unusually high iron deposits, leading to bright red sand from oxidized iron and dark rocks rich in unoxidized minerals."
+ pc_pd_ironsand_adj: "sandy"
+ mod_pc_pd_ironsand_habitability: "Desert Habitability"
+ trait_pc_pd_ironsand_preference: "Desert Preference"
+ trait_pc_pd_ironsand_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_salt: "Соляной мир"
  pc_pd_salt_desc: "Каменистый мир с азотно-кислородной атмосферой. Покрытая минералами местность состоит в основном из соляных равнин, горных хребтов и крупных кристаллических образований. Большая часть поверхности негостеприимна для большинства форм растительной и животной жизни."
  pc_pd_salt_adj: "соляная"
