--- a/planetary_diversity/localisation/russian/planetarydiversity_planet_modifiers_l_russian.yml
+++ b/planetary_diversity/localisation/russian/planetarydiversity_planet_modifiers_l_russian.yml
@@ -18,6 +18,8 @@
  pd_temperate_desc: "Этот мир может похвастаться мягким климатом, поддерживающим богатое биоразнообразие почти на каждом континенте."
  pd_sakura: "Мир сакуры"
  pd_sakura_desc: "Крупные участки суши разделены океанами, поверхность покрывают пышные, вечно цветущие леса."
+ pd_moss: "$pc_pd_moss$"
+ pd_moss_desc: "$pc_pd_moss_desc$"
  pd_megaflora: "Мир мегафлоры"
  pd_megaflora_desc: "Эта планета является домом для гигантской мегафлоры, которая покрывает поверхность планеты. При строительстве вокруг этой редкой растительности возникают серьезные проблемы."
  pd_petrified: "Мир окаменелых лесов"
@@ -78,6 +80,8 @@
  pd_coastal_desc: "Гидросфера планеты представлена глубокими холодными океанами с течениями, которые обеспечивают стабильность атмосферы, уменьшая количество осадков на суше, но создавая туман и дымку."
  pd_fungi: "Пустынный грибной мир"
  pd_fungi_desc: "Сухой и покрытый вулканическим пеплом, этот мир является местом обитания пустынных грибов, которые приспособились к высоким температурам, сухости и недостатку питательных веществ."
+ pd_ironsand: "$pc_pd_ironsand$"
+ pd_ironsand_desc: "$pc_pd_ironsand_desc$"
  pd_salt: "Соляной мир"
  pd_salt_desc: "Покрытая минералами поверхность планеты состоит в основном из соляных равнин, горных хребтов и крупных кристаллических образований. Большая часть суши негостеприимна для большинства форм растительной и животной жизни."
  pd_aquifer: "Водоносный мир"
