--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_l_simp_chinese.yml
@@ -180,3 +180,13 @@
  decision_pd_build_dayside_farm: "$decision_build_dayside_farm$"
  decision_pd_build_dayside_farm_desc: "$decision_build_dayside_farm_desc$"
  decision_pd_build_dayside_farm_effects_short: "$decision_build_dayside_farm_effects_short$"
+
+ #Gaia Terraforming
+ policy_pd_gaia_modifier: "World Shaping"
+ policy_pd_gaia_modifier_desc: "While costly, we can apply our advanced terraforming techniques to every planetary project, ensuring that every terraformed planet is shaped to perfection."
+ pd_expensive_gaia_terraforming_name: "World Shaper Terraforming"
+ pd_expensive_gaia_terraforming: "World Shaper Terraforming"
+ pd_expensive_gaia_terraforming_desc: "All terraforming projects will gain the §Y$engineered_environment_gaia$ Modifier§!. This will make all terraforming projects more expensive."
+ pd_normal_terraforming_name: "Normal Terraforming Standard"
+ pd_normal_terraforming: "Normal Terraforming Standard"
+ pd_normal_terraforming_desc: "Terraforming costs will remain standard, we will use World Shaper on the planets we choose."
