--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
@@ -35,6 +35,12 @@
  mod_pc_pd_sakura_habitability: "陆地星球宜居性"
  trait_pc_pd_sakura_preference: "陆地星球偏好"
  trait_pc_pd_sakura_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_moss: "Moss World"
+ pc_pd_moss_desc: "The planet's surface is completely covered by dense, sprawling moss. This relentless flora blankets the land, creating a sponge-like ecosystem that stabilizes the hydrosphere."
+ pc_pd_moss_adj: "mossy"
+ mod_pc_pd_moss_habitability: "Continental Habitability"
+ trait_pc_pd_moss_preference: "Continental Preference"
+ trait_pc_pd_moss_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_petrified: "木化石星球"
  pc_pd_petrified_desc: "拥有氮氧大气的岩石星球。水圈活跃且稳定，有被海洋分隔开的大陆，气候差异巨大。在冰河期结束后的全球性洪水的影响下，地表和地下都坐落着参天巨树的化石遗迹。"
  pc_pd_petrified_adj: "木化石"
@@ -185,6 +191,12 @@
  mod_pc_pd_fungi_habitability: "沙漠星球宜居性"
  trait_pc_pd_fungi_preference: "沙漠星球偏好"
  trait_pc_pd_fungi_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_ironsand: "Ironsand World"
+ pc_pd_ironsand_desc: "This desert planet has unusually high iron deposits, leading to bright red sand from oxidized iron and dark rocks rich in unoxidized minerals."
+ pc_pd_ironsand_adj: "sandy"
+ mod_pc_pd_ironsand_habitability: "Desert Habitability"
+ trait_pc_pd_ironsand_preference: "Desert Preference"
+ trait_pc_pd_ironsand_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_salt: "盐晶星球"
  pc_pd_salt_desc: "有氮氧大气层的岩石星球。地表矿物遍布，主要环境是盐滩、山脉以及大型晶体构造。大部分区域都不适合动植物生存。"
  pc_pd_salt_adj: "盐碱"
