--- a/planetary_diversity/localisation/braz_por/planetarydiversity_planet_classes_l_braz_por.yml
+++ b/planetary_diversity/localisation/braz_por/planetarydiversity_planet_classes_l_braz_por.yml
@@ -37,6 +37,12 @@
  mod_pc_pd_sakura_habitability: "Continental Habitability"
  trait_pc_pd_sakura_preference: "Continental Preference"
  trait_pc_pd_sakura_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_moss: "Moss World"
+ pc_pd_moss_desc: "The planet's surface is completely covered by dense, sprawling moss. This relentless flora blankets the land, creating a sponge-like ecosystem that stabilizes the hydrosphere."
+ pc_pd_moss_adj: "mossy"
+ mod_pc_pd_moss_habitability: "Continental Habitability"
+ trait_pc_pd_moss_preference: "Continental Preference"
+ trait_pc_pd_moss_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_petrified: "Mundo Petrificado"
  pc_pd_petrified_desc: "Mundo rochoso com atmosfera de nitrogênio-oxigênio com hidrosfera ativa e estável. Grandes massas de terra são separadas por oceanos, com grandes variações climáticas. Devido ao efeito de uma inundação planetária após uma era glacial, restos petrificados de árvores gigantes podem ser encontrados tanto na superfície quanto enterrados no solo."
  pc_pd_petrified_adj: "petrificado"
@@ -193,6 +199,12 @@
  mod_pc_pd_fungi_habitability: "Habitabilidade Desértica"
  trait_pc_pd_fungi_preference: "Preferência Desértica"
  trait_pc_pd_fungi_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_ironsand: "Ironsand World"
+ pc_pd_ironsand_desc: "This desert planet has unusually high iron deposits, leading to bright red sand from oxidized iron and dark rocks rich in unoxidized minerals."
+ pc_pd_ironsand_adj: "sandy"
+ mod_pc_pd_ironsand_habitability: "Desert Habitability"
+ trait_pc_pd_ironsand_preference: "Desert Preference"
+ trait_pc_pd_ironsand_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_salt: "Mundo Salar"
  pc_pd_salt_desc: "Mundo rochoso com atmosfera de nitrogênio-oxigênio. O terreno coberto de minerais consiste em grande parte de salinas e cadeias de montanhas e grandes formações cristalinas. Grande parte da superfície é inóspita para a maioria das formas de vida vegetal e animal."
  pc_pd_salt_adj: "salgado"
