--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
@@ -15,6 +15,8 @@
  pd_temperate_desc: "这个世界气候温和，几乎每一块陆地都有丰富的生物多样性。"
  pd_sakura: "樱花世界"
  pd_sakura_desc: "大陆被海洋分隔，茂密而绚丽的花树森林覆盖着大地。"
+ pd_moss: "$pc_pd_moss$"
+ pd_moss_desc: "$pc_pd_moss_desc$"
  pd_megaflora: "巨树世界"
  pd_megaflora_desc: "巨树覆盖了星球地表，其庞大的根底向下延伸有数英里之深。在此类罕见植物周围进行建设成为了一项富有挑战的任务。"
  pd_petrified: "木化石世界"
@@ -69,6 +71,8 @@
  pd_coastal_desc: "深洋使大气高度稳定，抑制陆地降水。普遍的雾霭维持各类多肉植物和灌木的生存。"
  pd_fungi: "蕈菌沙漠世界"
  pd_fungi_desc: "此地气候干燥，地表覆盖着火山灰，生长着能够忍耐高温、干旱与养分匮乏的沙漠真菌。"
+ pd_ironsand: "$pc_pd_ironsand$"
+ pd_ironsand_desc: "$pc_pd_ironsand_desc$"
  pd_salt: "盐晶世界"
  pd_salt_desc: "尽管这里遍地都是丰饶的矿脉，高盐的地表环境却很不适宜动植物生存。"
  pd_aquifer: "蓄水层世界"
