--- a/planetary_diversity_uniques/localisation/simp_chinese/pd_uniques_l_simp_chinese.yml
+++ b/planetary_diversity_uniques/localisation/simp_chinese/pd_uniques_l_simp_chinese.yml
@@ -169,7 +169,7 @@
  tech_acean_resonators_desc: "艾森水晶谐振主要影响有机系统，不过在机械系统中，也有许多可能利用这种奇特的谐振频率的地方。"
  tech_acean_resonators_tt_desc: "§H解锁特质：§!$trait_pd_acean_resonators$"
  trait_pd_acean_resonators: "艾森水晶电子谐振器"
- trait_pd_acean_resonators_desc: "将艾森水晶整合到装配模式中，可以保障系统构筑更迅速、更高效。"
+ trait_pd_acean_resonators_desc: "将艾森水晶整合到装配模式中，可以保证系统构筑更迅速、更高效。"
  trait_pd_acean_resonators_tt: "£sr_acean£ §Y$sr_acean$§!维护费：§R+0.02§!\n$r_energy$维护费：§G-1§!"
  edict_acean_minerals: "艾森水晶矿物生长"
  edict_acean_minerals_desc: "利用艾森水晶来促进矿物生长，可以大幅提升矿物产出。"
