--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_l_simp_chinese.yml
@@ -180,13 +180,11 @@
  decision_pd_build_dayside_farm: "$decision_build_dayside_farm$"
  decision_pd_build_dayside_farm_desc: "$decision_build_dayside_farm_desc$"
  decision_pd_build_dayside_farm_effects_short: "$decision_build_dayside_farm_effects_short$"
-
- #Gaia Terraforming
- policy_pd_gaia_modifier: "World Shaping"
- policy_pd_gaia_modifier_desc: "While costly, we can apply our advanced terraforming techniques to every planetary project, ensuring that every terraformed planet is shaped to perfection."
- pd_expensive_gaia_terraforming_name: "World Shaper Terraforming"
- pd_expensive_gaia_terraforming: "World Shaper Terraforming"
- pd_expensive_gaia_terraforming_desc: "All terraforming projects will gain the §Y$engineered_environment_gaia$ Modifier§!. This will make all terraforming projects more expensive."
- pd_normal_terraforming_name: "Normal Terraforming Standard"
- pd_normal_terraforming: "Normal Terraforming Standard"
- pd_normal_terraforming_desc: "Terraforming costs will remain standard, we will use World Shaper on the planets we choose."
+ policy_pd_gaia_modifier: "星球重塑"
+ policy_pd_gaia_modifier_desc: "我们可以将高等环境改造技术用在每一项星球工程中，尽管这花费不菲。这将确保每一个经历改造的星球都被塑造为完美的姿态。"
+ pd_expensive_gaia_terraforming_name: "星球塑形师改造"
+ pd_expensive_gaia_terraforming: "星球塑形师改造"
+ pd_expensive_gaia_terraforming_desc: "所有环境改造项目都将获得§Y$engineered_environment_gaia$修正§!，并因此变得更为昂贵。"
+ pd_normal_terraforming_name: "常规环境改造标准"
+ pd_normal_terraforming: "常规环境改造标准"
+ pd_normal_terraforming_desc: "环境改造花费会保持常规水平。选中的星球才会被应用星球塑形师技术。"
